...

    override func viewDidLoad() {
        super.viewDidLoad()

        webView.navigationDelegate = self

        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
    }

    @IBAction private func didTapBackButton(_ sender: Any?) {
        delegate?.webViewViewControllerDidCancel(self)
    }
...
